--- a/src/tsp_solver/CMakeLists.txt
+++ b/src/tsp_solver/CMakeLists.txt
@@ -5,11 +5,14 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+add_definitions(-DPROJECT_ROOT_DIR="${PROJECT_SOURCE_DIR}")
 # find dependencies
 find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -23,12 +26,27 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
-file(GLOB SOURCES "src/*.cpp")
 
-add_executable(tsp_solver_executable ${SOURCES})
+
+add_executable(tsp_solver_listener src/listener_ros2.cpp)
+ament_target_dependencies(tsp_solver_listener rclcpp std_msgs)
+
+file(GLOB SOURCES "src/Approx.cpp"
+                  "src/BnB.cpp"
+                  "src/Greedy.cpp"
+                  "src/HC.cpp"
+                  "src/Read.cpp"
+                  "src/SA.cpp"
+                  "src/TSP.h"
+                  "src/TSPSolver.h"
+                  "src/TSPSolver.cpp")
+# file (GLOB SOURCES "src/*.cpp" "src/*.h")
+add_executable(tsp_solver_executable "src/TSPSolver.cpp" ${SOURCES})
+
+
+
 install(TARGETS
+  tsp_solver_listener
   tsp_solver_executable
   DESTINATION lib/${PROJECT_NAME})
 ament_package()
