add tsp executable

--- a/src/tsp_solver/CMakeLists.txt
+++ b/src/tsp_solver/CMakeLists.txt
@@ -28,8 +28,6 @@ endif()
 
 
 
-add_executable(tsp_solver_listener src/listener_ros2.cpp)
-ament_target_dependencies(tsp_solver_listener rclcpp std_msgs)
 
 file(GLOB SOURCES "src/Approx.cpp"
                   "src/BnB.cpp"
@@ -41,7 +39,10 @@ file(GLOB SOURCES "src/Approx.cpp"
                   "src/TSPSolver.h"
                   "src/TSPSolver.cpp")
 # file (GLOB SOURCES "src/*.cpp" "src/*.h")
-add_executable(tsp_solver_executable "src/TSPSolver.cpp" ${SOURCES})
+add_executable(tsp_solver_listener src/listener_ros2.cpp ${SOURCES})
+ament_target_dependencies(tsp_solver_listener rclcpp std_msgs)
+
+add_executable(tsp_solver_executable "src/TSP_executable.cpp" ${SOURCES})
 
 
 
