--- a/src/cpp_pubsub/CMakeLists.txt
+++ b/src/cpp_pubsub/CMakeLists.txt
@@ -5,6 +5,8 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+add_definitions(-DPROJECT_ROOT_DIR="${PROJECT_SOURCE_DIR}")
+include_directories(${PROJECT_SOURCE_DIR}/../utils)
 # find dependencies
 find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
