--- a/src/tsp_solver/CMakeLists.txt
+++ b/src/tsp_solver/CMakeLists.txt
@@ -5,6 +5,7 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+include_directories(${PROJECT_SOURCE_DIR}/../utils)
 add_definitions(-DPROJECT_ROOT_DIR="${PROJECT_SOURCE_DIR}")
 # find dependencies
 find_package(ament_cmake REQUIRED)
