--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-/build/*
-/install/*
-/log/*
+**/build/*
+**/install/*
+**/log/*
 /src/ros_tutorials/*
 _LS1_1*
 burma14_*
 .vscode/*
 src/ros_tutorials
+
