--- a/src/mpc/CMakeLists.txt
+++ b/src/mpc/CMakeLists.txt
@@ -32,7 +32,7 @@ find_package(Eigen3)
 include_directories(SYSTEM ${EIGEN3_INCLUDE_DIR})
 
 #MPCExample
-add_executable(MPCExample src/example/src/MPCExample.cpp)
+add_executable(MPCExample src/MPCExample.cpp)
 target_link_libraries(MPCExample OsqpEigen::OsqpEigen)
 
 # find_package(OsqpEigen REQUIRED)
