--- a/src/rrt_solver/CMakeLists.txt
+++ b/src/rrt_solver/CMakeLists.txt
@@ -11,6 +11,9 @@ if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
 endif()
 
+set (CMAKE_CXX_STANDARD 17)
+include_directories(${PROJECT_SOURCE_DIR}/../utils)
+
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
