--- a/src/cpp_pubsub/CMakeLists.txt
+++ b/src/cpp_pubsub/CMakeLists.txt
@@ -17,7 +17,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 
-add_executable(talker src/publisher_member_function.cpp)
+add_executable(talker src/publisher_tsp.cpp)
 ament_target_dependencies(talker rclcpp std_msgs)
 
 # if(BUILD_TESTING)
@@ -33,12 +33,12 @@ ament_target_dependencies(talker rclcpp std_msgs)
 # endif()
 
 # subscriber
-add_executable(listener src/subscriber_member_function.cpp)
-ament_target_dependencies(listener rclcpp std_msgs)
+# add_executable(listener src/subscriber_member_function.cpp)
+# ament_target_dependencies(listener rclcpp std_msgs)
 
 install(TARGETS
   talker
-  listener
+  # listener
   DESTINATION lib/${PROJECT_NAME})
   
 ament_package()
