--- a/src/rrt_solver/CMakeLists.txt
+++ b/src/rrt_solver/CMakeLists.txt
@@ -41,6 +41,13 @@ target_include_directories(rrt_demo_withoutGUI PUBLIC
 
 target_link_libraries(rrt_demo_withoutGUI sfml-graphics sfml-window sfml-system)
 
+
+# Add RRT-listener
+add_executable(rrt_listener src/listener_rrt.cpp ${SOURCES})
+ament_target_dependencies(rrt_listener rclcpp std_msgs)
+target_link_libraries(rrt_listener sfml-graphics sfml-window sfml-system)
+
+
 install(TARGETS rrt_demo_withoutGUI DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
