--- a/src/dynaslam/CMakeLists.txt
+++ b/src/dynaslam/CMakeLists.txt
@@ -22,9 +22,9 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+
 
 # find opencv
 find_package(OpenCV 2.4.11 QUIET)
