--- a/src/real_time_manager/CMakeLists.txt
+++ b/src/real_time_manager/CMakeLists.txt
@@ -31,7 +31,14 @@ target_include_directories(set_cpu_and_priority PUBLIC
   $<INSTALL_INTERFACE:include>)
 target_link_libraries(set_cpu_and_priority yaml-cpp)
 
-install(TARGETS et_statistics set_cpu_and_priority DESTINATION lib/${PROJECT_NAME})
+
+add_executable(update_priority_assignments src/update_priority_assignments.cpp)
+target_include_directories(update_priority_assignments PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>)
+target_link_libraries(update_priority_assignments yaml-cpp)
+
+install(TARGETS et_statistics set_cpu_and_priority update_priority_assignments DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
