buid in release mode

--- a/src/rrt_solver/CMakeLists.txt
+++ b/src/rrt_solver/CMakeLists.txt
@@ -12,6 +12,8 @@ if(NOT CMAKE_CXX_STANDARD)
 endif()
 
 set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_BUILD_TYPE Release)
+
 include_directories(${PROJECT_SOURCE_DIR}/../utils)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
