--- a/src/cpp_pubsub/CMakeLists.txt
+++ b/src/cpp_pubsub/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.8)
 project(cpp_pubsub)
 
 set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_BUILD_TYPE Release)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
