--- a/src/mpc/CMakeLists.txt
+++ b/src/mpc/CMakeLists.txt
@@ -8,6 +8,7 @@ endif()
 
 
 set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_BUILD_TYPE Release)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
