--- a/src/real_time_manager/configs/local_cpu_and_priority.yaml
+++ b/src/real_time_manager/configs/local_cpu_and_priority.yaml
@@ -1,9 +1,9 @@
-Tasks:
+tasks:
   - id: 0
     name: TSP
     cpu_lists: [1]
     scheduling_policy: SCHED_FIFO
-    priority: 2
+    priority: 1
   - id: 1
     name: MPC
     cpu_lists: [1]
@@ -13,9 +13,9 @@ Tasks:
     name: RRT
     cpu_lists: [1]
     scheduling_policy: SCHED_FIFO
-    priority: 3
+    priority: 2
   - id: 3
     name: SLAM
     cpu_lists: [1]
     scheduling_policy: SCHED_FIFO
-    priority: 1
+    priority: 3
