--- a/all_time_records/task_characteristics.yaml
+++ b/all_time_records/task_characteristics.yaml
@@ -1,33 +1,33 @@
 tasks:
   - id: 0
-    execution_time_mu: 1002
-    execution_time_sigma: 5
-    execution_time_min: 1000
-    execution_time_max: 1031
+    execution_time_mu: 10002
+    execution_time_sigma: 3
+    execution_time_min: 10000
+    execution_time_max: 10013
     period: 10000
     deadline: 10000
     name: TSP
   - id: 1
-    execution_time_mu: 63
-    execution_time_sigma: 0
-    execution_time_min: 62
-    execution_time_max: 66
-    period: 20
-    deadline: 20
+    execution_time_mu: 58
+    execution_time_sigma: 6
+    execution_time_min: 12
+    execution_time_max: 60
+    period: 50
+    deadline: 50
     name: MPC
   - id: 2
-    execution_time_mu: 1496
-    execution_time_sigma: 835
-    execution_time_min: 399
-    execution_time_max: 4558
+    execution_time_mu: 1128
+    execution_time_sigma: 678
+    execution_time_min: 204
+    execution_time_max: 3270
     period: 1000
     deadline: 1000
     name: RRT
   - id: 3
-    execution_time_mu: 3290
-    execution_time_sigma: 4336
-    execution_time_min: 1174
-    execution_time_max: 17979
+    execution_time_mu: 60781
+    execution_time_sigma: 383724
+    execution_time_min: 538
+    execution_time_max: 2745169
     period: 1000
     deadline: 1000
     name: SLAM
