try to add scheduler as option into launch file, but not finished yet

--- a/src/real_time_manager/configs/local_fixed_cpu_and_priority.yaml
+++ b/src/real_time_manager/configs/local_fixed_cpu_and_priority.yaml
@@ -2,20 +2,20 @@ tasks:
   - id: 0
     name: TSP
     cpu_lists: [2]
-    scheduling_policy: SCHED_OTHER
-    priority: 0
+    scheduling_policy: SCHED_FIFO
+    priority: 2
   - id: 1
     name: MPC
     cpu_lists: [1]
-    scheduling_policy: SCHED_OTHER
-    priority: 0
+    scheduling_policy: SCHED_FIFO
+    priority: 5
   - id: 2
     name: RRT
     cpu_lists: [1]
-    scheduling_policy: SCHED_OTHER
-    priority: 0
+    scheduling_policy: SCHED_FIFO
+    priority: 3
   - id: 3
     name: SLAM
     cpu_lists: [1]
-    scheduling_policy: SCHED_OTHER
-    priority: 0
+    scheduling_policy: SCHED_FIFO
+    priority: 4
