--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,17 @@ _LS1_1*
 burma14_*
 .vscode/*
 src/ros_tutorials
+*__pycache__*
+*/release/*
+SP_Metric_Opt/TaskData/periodic-set-*
+SP_Metric_Opt/TaskData/*/periodic-set-*
+SP_Metric_Opt/TaskData/dagTasks/*
+SP_Metric_Opt/TaskData/*/dag-set*
+SP_Metric_Opt/TaskData/
+SP_Metric_Opt/TaskData/
+*.vscode/*
+SP_Metric_Opt/TaskData/
+*.idea*
+*/Visualize_SP_Metric/data/temp/*
+
 
