--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ SP_Metric_Opt/TaskData/dagTasks/*
 SP_Metric_Opt/TaskData/*/dag-set*
 SP_Metric_Opt/TaskData/
 SP_Metric_Opt/TaskData/
-*.vscode/*
+*.vscode*
 SP_Metric_Opt/TaskData/
 *.idea*
 */Visualize_SP_Metric/data/temp/*
