--- a/SP_Metric_Opt/CMakeLists.txt
+++ b/SP_Metric_Opt/CMakeLists.txt
@@ -24,7 +24,7 @@ include_directories(/usr/local/lib)
 file(GLOB_RECURSE sources "sources/*.cpp" "sources/*.h")
 set(CONVENIENCE_LIB_NAME ${PROJECT_NAME})
 
-add_definitions(-DPROJECT_ROOT_DIR="${PROJECT_SOURCE_DIR}")
+add_definitions(-DSP_OPT_PROJECT_ROOT_DIR="${PROJECT_SOURCE_DIR}")
 
 if(CMAKE_BUILD_TYPE STREQUAL "DEBUG")
 find_package(GTSAMCMakeTools)
