--- a/SP_Metric_Opt/CMakeLists.txt
+++ b/SP_Metric_Opt/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 project(SP_OPT CXX C)
 set (CMAKE_CXX_STANDARD 17)
 # set(CMAKE_BUILD_TYPE Debug)
-set(CMAKE_BUILD_TYPE DEBUG)
+set(CMAKE_BUILD_TYPE Release)
   
   
 include_directories(${CMAKE_SOURCE_DIR})
