--- a/SP_Metric_Opt/TaskData/test_robotics_v1.yaml
+++ b/SP_Metric_Opt/TaskData/test_robotics_v1.yaml
@@ -38,7 +38,7 @@ chains:
         - 2
         - 1
       sp_threshold: 0.5
-      sp_Weight: 1
+      sp_weight: 1
       deadline: 10000
   - chain1:
       nodes:
