--- a/SP_Metric_Opt/TaskData/test_robotics_v2.yaml
+++ b/SP_Metric_Opt/TaskData/test_robotics_v2.yaml
@@ -38,12 +38,12 @@ chains:
       - 1
       - 2
     sp_threshold: 0.5
-    sp_Weight: 1
+    sp_weight: 1
     deadline: 1000
   chain1:
     nodes:
       - 1
       - 2
     sp_threshold: 0.5
-    sp_Weight: 1
+    sp_weight: 1
     deadline: 1000
