--- a/SP_Metric_Opt/TaskData/test_robotics_v8.yaml
+++ b/SP_Metric_Opt/TaskData/test_robotics_v8.yaml
@@ -8,7 +8,7 @@ tasks:
     deadline: 500
     name: TSP
     sp_threshold: 0.5
-    sp_Weight: 0.5
+    sp_weight: 0.5
   - id: 1
     execution_time_mu: 800
     execution_time_sigma: 100
@@ -18,4 +18,4 @@ tasks:
     deadline: 1000
     name: SLAM
     sp_threshold: 0.5
-    sp_Weight: 200
+    sp_weight: 200
