--- a/all_time_records/task_characteristics.yaml
+++ b/all_time_records/task_characteristics.yaml
@@ -1,9 +1,9 @@
 tasks:
   - id: 0
-    execution_time_mu: 5003.0397589333334
-    execution_time_sigma: 6.676514922005568
-    execution_time_min: 5000.9619199999997
-    execution_time_max: 5027.9677759999995
+    execution_time_mu: 5006.0116000000007
+    execution_time_sigma: 8.864927844172513
+    execution_time_min: 5000.8156479999998
+    execution_time_max: 5025.9232000000002
     period: 10000
     deadline: 10000
     processorId: 0
@@ -11,10 +11,10 @@ tasks:
     sp_threshold: 0.5
     sp_weight: 1
   - id: 1
-    execution_time_mu: 6.7716524800000011
-    execution_time_sigma: 0.074330228207235491
-    execution_time_min: 6.5989760000000004
-    execution_time_max: 7.0619519999999998
+    execution_time_mu: 6.7326566400000027
+    execution_time_sigma: 0.11050264783746241
+    execution_time_min: 6.5420160000000003
+    execution_time_max: 7.0358080000000003
     period: 20
     deadline: 20
     processorId: 1
@@ -22,10 +22,10 @@ tasks:
     sp_threshold: 0.5
     sp_weight: 1
   - id: 2
-    execution_time_mu: 1201.0274041600001
-    execution_time_sigma: 651.0465470925684
-    execution_time_min: 175.43420800000001
-    execution_time_max: 3441.3354880000002
+    execution_time_mu: 1342.7211782400004
+    execution_time_sigma: 809.1316143631193
+    execution_time_min: 415.72835200000003
+    execution_time_max: 3585.7658879999999
     period: 2000
     deadline: 2000
     processorId: 1
@@ -33,10 +33,10 @@ tasks:
     sp_threshold: 0.5
     sp_weight: 1
   - id: 3
-    execution_time_mu: 4875.15564352
-    execution_time_sigma: 7165.7260484584222
-    execution_time_min: 531.30239999999992
-    execution_time_max: 30274.840543999999
+    execution_time_mu: 4246.1503712000012
+    execution_time_sigma: 1302.9277968073031
+    execution_time_min: 1427.6195839999998
+    execution_time_max: 11098.318464
     period: 2000
     deadline: 2000
     processorId: 0
