--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,6 @@ SP_Metric_Opt/TaskData/*/dag-set*
 *.vscode*
 *.idea*
 */Visualize_SP_Metric/data/temp/*.txt
-
-
+all_time_records/AppTest*
+SP_Metric_Opt/Visualize_SP_Metric/*.bin
+SP_Metric_Opt/TaskData/pa_res_test_robotics_v1.yaml
