--- a/SP_Metric_Opt/CMakeLists.txt
+++ b/SP_Metric_Opt/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.0)
 project(SP_OPT CXX C)
 set (CMAKE_CXX_STANDARD 17)
-# set(CMAKE_BUILD_TYPE Debug)
-set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE DEBUG)
+# set(CMAKE_BUILD_TYPE Release)
   
   
 include_directories(${CMAKE_SOURCE_DIR})
@@ -61,3 +61,4 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 
 add_subdirectory(sources)
 add_subdirectory(tests)
+add_subdirectory(applications)
