fix warning in TSP, add listener

--- a/SP_Metric_Opt/applications/tsp_solver/CMakeLists.txt
+++ b/SP_Metric_Opt/applications/tsp_solver/CMakeLists.txt
@@ -13,3 +13,6 @@ file(GLOB SOURCES_TSP "src/Approx.cpp"
 add_executable(tsp_solver_executable "src/TSP_executable.cpp" ${SOURCES_TSP})
 target_link_libraries(tsp_solver_executable ${CONVENIENCE_LIB_NAME})
 
+
+add_executable(tsp_solver_listener "src/listener_tsp.cpp" ${SOURCES_TSP})
+target_link_libraries(tsp_solver_listener ${CONVENIENCE_LIB_NAME})
