--- a/SP_Metric_Opt/applications/CMakeLists.txt
+++ b/SP_Metric_Opt/applications/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(tsp_solver)
 add_subdirectory(mpc)
 add_subdirectory(dynaslam)
 add_subdirectory(rrt_solver)
+add_subdirectory(real_time_manager)
