--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ all_time_records/AppTest*
 SP_Metric_Opt/Visualize_SP_Metric/*.bin
 SP_Metric_Opt/TaskData/pa_res_test_robotics_v1.yaml
 all_time_records/*.txt
+all_time_records/*.pdf
