--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ SP_Metric_Opt/TaskData/pa_res_test_robotics_v1.yaml
 all_time_records/*.txt
 all_time_records/*.pdf
 SP_Metric_Opt/TaskData/pa_result.yaml
+SP_Metric_Opt/applications/real_time_manager/configs/local_cpu_and_priority.yaml
