--- a/SP_Metric_Opt/applications/CMakeLists.txt
+++ b/SP_Metric_Opt/applications/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(mpc)
 add_subdirectory(dynaslam)
 add_subdirectory(rrt_solver)
 add_subdirectory(real_time_manager)
+add_subdirectory(tsp_solver_osm)
