--- a/SP_Metric_Opt/applications/tsp_solver_osm/config/algorithm_config.yaml
+++ b/SP_Metric_Opt/applications/tsp_solver_osm/config/algorithm_config.yaml
@@ -4,7 +4,7 @@ general:
   log_data: 1   # 0: don't log;             1: log data
   print_path: 0 # 0: don't print;           1: print path (sequence of node_id)
   max_iter: 1000000
-  max_time: 0.3 # Sec
+  max_time: 10 # Sec
 
 rrt_params:
   goal_bias: 1.0 # 0.0 ~ 1.0
@@ -12,10 +12,13 @@ rrt_params:
 
 destinations: ## OSM Show ways : 0
   ## sanfrancisco_bugtrap (Pseudo-mode)
-  source_id: 0
-  # 566163, 394039, 1183351, 835647, 725115, 393810,  1241804, 1053685
-  objective_ids: [2, 3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20] 
-  target_id: 10
+  # source_id: 0
+  # # 566163, 394039, 1183351, 835647, 725115, 393810,  1241804, 1053685
+  # objective_ids: [2, 3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20] 
+  # target_id: 10
+  source_id: 808
+  objective_ids: [56, 1053,10,20,30,40,50,60,90,100]
+  target_id: 560
 
   ## Seattle
   # source_id: 486234
