update test coeffs

--- a/SP_Metric_Opt/TaskData/test_robotics_v17.yaml
+++ b/SP_Metric_Opt/TaskData/test_robotics_v17.yaml
@@ -12,7 +12,7 @@ tasks:
     sp_weight: 1
     total_running_time: 300e3
     performance_records_time: "47.2 101.2 164.3 342.5 404.8 473.8 537.1 717.8 771.8 939.5"
-    performance_records_perf: "0.         0.78223968 0.85387062 0.94300589 0.98258149 0.9861591 0.99704945 0.99911459 0.99978866 1."
+    performance_records_perf: "0.5        0.89111984 0.92693531 0.97150294 0.99129074 0.99307955 0.99852472 0.99955729 0.99989433 1."
   - id: 1
     execution_time_mu: 6.7311328000000001
     execution_time_sigma: 0.19576641726140398
