--- a/SP_Metric_Opt/TaskData/test_robotics_v18.yaml
+++ b/SP_Metric_Opt/TaskData/test_robotics_v18.yaml
@@ -11,8 +11,8 @@ tasks:
     sp_threshold: 0.5
     sp_weight: 1
     total_running_time: 300e3
-    performance_records_time: "40 50 60 70 150"
-    performance_records_perf: "0.5 0.6 0.7 0.8 1."
+    performance_records_time: "40 60 80 150"
+    performance_records_perf: "0.5 0.6 0.8 1."
   - id: 1
     execution_time_mu: 6.7311328000000001
     execution_time_sigma: 0.19576641726140398
