--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ all_time_records/*.txt
 all_time_records/*.pdf
 SP_Metric_Opt/TaskData/pa_result.yaml
 SP_Metric_Opt/applications/real_time_manager/configs/local_cpu_and_priority.yaml
+SP_Metric_Opt/applications/tsp_solver_osm/experiments/*_command_history.csv
