--- a/SP_Metric_Opt/Visualize_SP_Metric/data_for_test2/task_characteristics.yaml
+++ b/SP_Metric_Opt/Visualize_SP_Metric/data_for_test2/task_characteristics.yaml
@@ -7,6 +7,8 @@ tasks:
     period: 10000
     deadline: 10000
     name: TSP
+    performance_records_time: "400 600 800 1000"
+    performance_records_perf: "0.5 0.6 0.8 1."
   - id: 1
     execution_time_mu: 63
     execution_time_sigma: 1
