--- a/SP_Metric_Opt/applications/tsp_solver_osm/CMakeLists.txt
+++ b/SP_Metric_Opt/applications/tsp_solver_osm/CMakeLists.txt
@@ -17,3 +17,6 @@ target_link_libraries(tsp_solver_executable_osm ${CONVENIENCE_LIB_NAME})
 
 add_executable(tsp_solver_listener "tsp_listener.cpp" ${SOURCES_TSP})
 target_link_libraries(tsp_solver_listener ${CONVENIENCE_LIB_NAME})
+
+add_executable(save_tsp_perf_time_data "save_tsp_perf_time_data.cpp" ${SOURCES_TSP})
+target_link_libraries(save_tsp_perf_time_data ${CONVENIENCE_LIB_NAME})
