--- a/all_time_records/task_characteristics.yaml
+++ b/all_time_records/task_characteristics.yaml
@@ -1,51 +1,51 @@
 tasks:
   - id: 0
-    execution_time_mu: 1478.1797376
-    execution_time_sigma: 31.003416361109906
-    execution_time_min: 1456.876512
-    execution_time_max: 1527.1047680000001
-    period: 2000
-    deadline: 2000
+    execution_time_mu: 667.19156480000004
+    execution_time_sigma: 2.9717347297719399
+    execution_time_min: 663.48857599999997
+    execution_time_max: 672.94019200000002
+    period: 1500
+    deadline: 1500
     processorId: 0
     name: TSP
     sp_threshold: 0.5
     sp_weight: 1
-    total_running_time: 600e3
+    total_running_time: 300e3
     performance_records_time: 184.1  397.5  657.9 1285.1
     performance_records_perf: 0.5        0.89660927 0.93292741 0.97812056
   - id: 1
-    execution_time_mu: 6.495276800000001
-    execution_time_sigma: 0.063445450580402796
-    execution_time_min: 6.3566400000000005
-    execution_time_max: 6.5837440000000003
+    execution_time_mu: 6.9189247999999992
+    execution_time_sigma: 0.9163550626796193
+    execution_time_min: 6.2055039999999995
+    execution_time_max: 8.653535999999999
     period: 20
     deadline: 20
     processorId: 1
     name: MPC
     sp_threshold: 0.5
     sp_weight: 1
-    total_running_time: 600e3
+    total_running_time: 300e3
   - id: 2
-    execution_time_mu: 1677.5539872000002
-    execution_time_sigma: 1450.7883342821688
-    execution_time_min: 399.88563199999999
-    execution_time_max: 5564.2515839999996
+    execution_time_mu: 1232.383024
+    execution_time_sigma: 361.64424499450536
+    execution_time_min: 472.92406399999999
+    execution_time_max: 1806.246112
     period: 3000
     deadline: 3000
     processorId: 1
     name: RRT
     sp_threshold: 0.5
     sp_weight: 1
-    total_running_time: 600e3
+    total_running_time: 300e3
   - id: 3
-    execution_time_mu: 94.13552319999998
-    execution_time_sigma: 1.8059127905282162
-    execution_time_min: 89.961408000000006
-    execution_time_max: 96.493216000000004
-    period: 3000
-    deadline: 3000
+    execution_time_mu: 268.75400640000004
+    execution_time_sigma: 305.42706147083163
+    execution_time_min: 65.58201600000001
+    execution_time_max: 749.46335999999997
+    period: 2000
+    deadline: 2000
     processorId: 0
     name: SLAM
     sp_threshold: 0.9
     sp_weight: 2
-    total_running_time: 600e3
+    total_running_time: 300e3
