--- a/all_time_records/task_characteristics.yaml
+++ b/all_time_records/task_characteristics.yaml
@@ -1,51 +1,51 @@
 tasks:
   - id: 0
-    execution_time_mu: 667.19156480000004
-    execution_time_sigma: 2.9717347297719399
-    execution_time_min: 663.48857599999997
-    execution_time_max: 672.94019200000002
+    execution_time_mu: 1248.6311008
+    execution_time_sigma: 37.585113269965099
+    execution_time_min: 1218.5470399999999
+    execution_time_max: 1305.9279040000001
     period: 1500
     deadline: 1500
     processorId: 0
     name: TSP
     sp_threshold: 0.5
     sp_weight: 1
-    total_running_time: 300e3
-    performance_records_time: 184.1  397.5  657.9 1285.1
-    performance_records_perf: 0.5        0.89660927 0.93292741 0.97812056
+    total_running_time: 650e3
+    performance_records_time: 150  250 300 450 850 900 950 1000 1050 1100 1200 1500
+    performance_records_perf: 0.1  0.73 0.80 0.86 0.88 0.91 0.94 0.95 0.97 0.98 0.99 1
   - id: 1
-    execution_time_mu: 6.9189247999999992
-    execution_time_sigma: 0.9163550626796193
-    execution_time_min: 6.2055039999999995
-    execution_time_max: 8.653535999999999
-    period: 20
-    deadline: 20
+    execution_time_mu: 6.3677504000000003
+    execution_time_sigma: 0.029345210182174557
+    execution_time_min: 6.3262400000000003
+    execution_time_max: 6.4127039999999997
+    period: 10
+    deadline: 10
     processorId: 1
     name: MPC
-    sp_threshold: 0.5
+    sp_threshold: 0.99
     sp_weight: 1
-    total_running_time: 300e3
+    total_running_time: 650e3
   - id: 2
-    execution_time_mu: 1232.383024
-    execution_time_sigma: 361.64424499450536
-    execution_time_min: 472.92406399999999
-    execution_time_max: 1806.246112
-    period: 3000
-    deadline: 3000
+    execution_time_mu: 1070.8220383999999
+    execution_time_sigma: 424.38910470171152
+    execution_time_min: 408.12438400000002
+    execution_time_max: 1760.518016
+    period: 4000
+    deadline: 4000
     processorId: 1
     name: RRT
     sp_threshold: 0.5
     sp_weight: 1
-    total_running_time: 300e3
+    total_running_time: 650e3
   - id: 3
-    execution_time_mu: 268.75400640000004
-    execution_time_sigma: 305.42706147083163
-    execution_time_min: 65.58201600000001
-    execution_time_max: 749.46335999999997
+    execution_time_mu: 111.14497919999999
+    execution_time_sigma: 127.2325117617154
+    execution_time_min: 46.267712000000003
+    execution_time_max: 395.61471999999998
     period: 2000
     deadline: 2000
     processorId: 0
     name: SLAM
     sp_threshold: 0.9
     sp_weight: 2
-    total_running_time: 300e3
+    total_running_time: 650e3
