add profiler for optimization ET overhead

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ Experiments/MultiRun/*
 SP_Metric_Opt/applications/tsp_solver_osm/experiments/*_command_history.csv
 SP_Metric_Opt/applications/tsp_solver_osm/experiments/*_command_history.csv
 SP_Metric_Opt/TaskData/pa_res_*
+Experiments/*
+SP_Metric_Opt/temp_folder
